--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,11 @@
-name: RuboCop workflow
-on: [push, pull_request]
+name: Project CI workflow
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 jobs:
-  rubocop:
+  ci:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -10,3 +14,4 @@ jobs:
         ruby-version: '3.3'
         bundler-cache: true
     - run: bundle exec rubocop
+    - run: bundle exec rails test
