--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,14 +4,21 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+
 jobs:
   ci:
     runs-on: ubuntu-latest
+    env:
+      RAILS_ENV: test
+
     steps:
     - uses: actions/checkout@v4
     - uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.3'
+        ruby-version: '3.3.0'
         bundler-cache: true
+    - run: bundle install
     - run: bundle exec rubocop
+    - run: bundle exec rails db:migrate
+    - run: bundle exec rails db:test:prepare
     - run: bundle exec rails test
